fix(styles): Safari display issue with floating labels
A rendering issue in Safari clipped text input in a floating label input field where the floating label intersected with the current value of the input. Even having a transparent background, the input was invisible below the floating label. Setting the height of the floating label correctly fixes the rendering issue because now the label does no longer cover the value.

--- a/packages/styles/src/components/floating-label.scss
+++ b/packages/styles/src/components/floating-label.scss
@@ -19,15 +19,17 @@
     left: forms.$input-border-width;
     margin: 0;
     padding-inline: forms.$form-floating-padding-x;
-    padding-block: calc(
+    padding-top: calc(
       #{forms.$input-border-width} + #{forms.$form-floating-label-height * 0.5} - #{forms.$form-floating-label-font-size *
         type.$line-height-copy * 0.5}
     );
+    padding-bottom: 0;
     height: forms.$form-floating-label-height;
     border: 0;
     color: forms.$form-floating-label-color;
     font-size: forms.$form-floating-label-font-size;
     width: auto;
+    height: auto;
     max-width: calc(100% - (forms.$input-border-width * 2));
     white-space: nowrap;
     overflow: hidden;
